# api/swagger/swagger.json
@@ -940,6 +940,13 @@
                         "schema": {
                             "$ref": "#/definitions/v1.UpdatePolicyRequest"
                         }
+                    },
+                    {
+                        "type": "string",
+                        "description": "identifier of a policy",
+                        "name": "instanceId",
+                        "in": "path",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -965,7 +972,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "name of a policy",
+                        "description": "identifier of a policy",
                         "name": "instanceId",
                         "in": "path",
                         "required": true
@@ -1134,6 +1141,13 @@
                         "schema": {
                             "$ref": "#/definitions/v1.UpdateResourceRequest"
                         }
+                    },
+                    {
+                        "type": "string",
+                        "description": "identifier of a resource",
+                        "name": "instanceId",
+                        "in": "path",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -1159,7 +1173,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "name of a resource",
+                        "description": "identifier of a resource",
                         "name": "instanceId",
                         "in": "path",
                         "required": true
@@ -1364,6 +1378,13 @@
                         "schema": {
                             "$ref": "#/definitions/v1.UpdateRoleRequest"
                         }
+                    },
+                    {
+                        "type": "string",
+                        "description": "identifier of a role",
+                        "name": "instanceId",
+                        "in": "path",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -1426,6 +1447,13 @@
                         "schema": {
                             "$ref": "#/definitions/v1.AssignRoleRequest"
                         }
+                    },
+                    {
+                        "type": "string",
+                        "description": "identifier of a role",
+                        "name": "instanceId",
+                        "in": "path",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -1459,6 +1487,13 @@
                         "schema": {
                             "$ref": "#/definitions/v1.RevokeRoleRequest"
                         }
+                    },
+                    {
+                        "type": "string",
+                        "description": "identifier of a role",
+                        "name": "instanceId",
+                        "in": "path",
+                        "required": true
                     }
                 ],
                 "responses": {
